# business_management_system

./: .gitignore  pyproject.toml
bms/: .coverage  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
bms/bms/: settings.py  urls.py
bms/core/: urls.py  views.py
bms/meetings/: admin.py  forms.py  models.py  urls.py  views.py
bms/meetings/migrations/: 0001_initial.py  0002_alter_meeting_options_alter_meeting_description_and_more.py
bms/mycalendar/: urls.py  views.py
bms/tasks/: admin.py  forms.py  models.py  urls.py  views.py
bms/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_options_remove_task_team_and_more.py  0004_task_responsible_team.py  0005_taskrating.py
bms/teams/: admin.py  forms.py  models.py  urls.py  views.py
bms/teams/migrations/: 0001_initial.py  0002_initial.py  0003_team_admin.py  0004_remove_team_invite_code.py
bms/templates/: base.html  index.html
bms/templates/meetings/: meeting_confirm_cancel.html  meeting_detail.html  meeting_form.html  meeting_list.html
bms/templates/mycalendar/: calendar.html
bms/templates/tasks/: addtask.html  rate_task.html  task_detail.html  tasks_all.html  team_task_list.html  user_ratings.html
bms/templates/teams/: add_member.html  addteam.html  team_detail.html  teams_all.html
bms/templates/users/: login.html  password_change_done.html  password_change_form.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html  (+1 more)
bms/tests/: conftest.py
bms/users/: admin.py  forms.py  models.py  views.py
(+14 files in other folders)
