[project]
name = "business-management-system"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django==4.2",
    "djangorestframework>=3.16.0",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
]
